# SchoolProjects

ComputerProgramming_CS6011/: ChatAppDesignLab_DerekOlson_DavidScovel_DaltonBennet_Alex.key  Website URL.txt
ComputerProgramming_CS6011/BeesGame/: index.html
ComputerProgramming_CS6011/Chat_Application/: settings.gradle
ComputerProgramming_CS6011/HTTP_Server/: Dockerfile  build.gradle
ComputerProgramming_CS6011/InteractiveTimeTable/: index.html
ComputerProgramming_CS6011/JavaScript_Hello_World/: index.html
ComputerProgramming_CS6011/JavaScript_Selection_Sort/: index.html
ComputerProgramming_CS6011/chat/: db.db
ComputerProgramming_CS6011/chatServer/: build.gradle
ComputerProgramming_CS6011/node_chat_server/: index.js  package-lock.json  package.json
ComputerProgramming_CS6011/untitled/: recursion.js
DataAnalyticsVis_CS6017/homework1/: 2019-PM2.5.csv  homework1.py  homework1_map.ipynb
DataAnalyticsVis_CS6017/homework2/: homework2_regression.ipynb
DataAnalyticsVis_CS6017/homework7/: covid.json  (+3 more)
DataStructuresAlgorithms_CS6012/: .project  Untitled.csv  lab00.numbers
SoftwareDevelopment_CS6010/: Lab 09_03_2019 HexBinary.rtf  Monday Lab Pointer Practice.HEIC
SoftwareEngineering_CS6015/: CS6015 Software Spec Dalton Bennet Alex Nelson David Scovel Derek Olson.pages  MSDScript Documantation.pages
SoftwareEngineering_CS6015/Parser/: CMakeLists.txt  MSDScriptLib.h  cont.cpp  expr.hpp  main.cpp  parse.hpp  pointer.h  step.hpp  value.cpp
SoftwareEngineering_CS6015/Parser/MSDScript/: catch.hpp  cont.hpp  env.cpp  expr.cpp  parse.cpp  step.cpp  value.hpp
(+529 files in other folders)
